--- a/components/backend-tests-go-fbhyphms/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-fbhyphms/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-fbhyphms
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-fbhyphms:9b2ef9ececc5848719a216348e26e07a3eea4682@sha256:dc8f34c30217f81f268bb95e85e51d677cd35fce410fb3f55f9c5d569a391ec3
+          name: container-image
